--- a/Asp.NETMVCCRUD/Views/PagoConsolidado/AddOrEdit.cshtml
+++ b/Asp.NETMVCCRUD/Views/PagoConsolidado/AddOrEdit.cshtml
@@ -31,6 +31,13 @@
         @Html.EditorFor(model => model.CodigoMatricula, new { htmlAttributes = new { @class = "form-control" } })
     </div>
 
+
+
+    <div class="form-group">
+       Concepto de pago
+        @Html.EditorFor(model => model.concepto.NroConcepto, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(model => model.FechaPago, new { @class = "control-label" })
         @Html.EditorFor(model => model.FechaPago, new { htmlAttributes = new { @class = "form-control" } })
