cambio IdConcepto por Nro Concepto

--- a/Asp.NETMVCCRUD/Views/PagoConsolidado/Index.cshtml
+++ b/Asp.NETMVCCRUD/Views/PagoConsolidado/Index.cshtml
@@ -9,6 +9,7 @@
             <th>ID</th>
             <th>CodigoAlumno</th>
             <th>NumDeposito</th>
+            <th>Concepto</th>
             <th>Importe</th>
             <th>FechaPago</th>
             <th>IdMatricula</th>
@@ -43,7 +44,7 @@
                     { "data": "IdPagoConsolidado" },
                      { "data": "CodigoAlumno" },
                     { "data": "NumDeposito" },
-                   
+                   {"data":"concepto.NroConcepto"},
                  { "data": "Importe" },
                          {
                              "data": "FechaPago",
