Actualización de Stored Procedure

--- a/Asp.NETMVCCRUD/Views/Shared/_Layout.cshtml
+++ b/Asp.NETMVCCRUD/Views/Shared/_Layout.cshtml
@@ -217,9 +217,9 @@
                             <li><a href="@Url.Action("Index","Usuario")"><i class="fa fa-circle-o"></i>  Usuario</a></li>
                             <li><a href="@Url.Action("Index","ConceptoPago")"><i class="fa fa-circle-o"></i>  Concepto de Pago</a></li>
                             <li><a href="@Url.Action("Index","Alumno")"><i class="fa fa-circle-o"></i> Alumno</a></li>
-                            <li><a href="@Url.Action("Index","AlumnoMatricula")"><i class="fa fa-circle-o"></i>  Matriculas</a></li>
+                            <li><a href="@Url.Action("Index","AlumnoMatricula")"><i class="fa fa-circle-o"></i>Lista de Matriculados</a></li>
                             <li><a href="@Url.Action("Index","PagoConsolidado")"><i class="fa fa-circle-o"></i>Lista de Pagos</a></li>
-                            <li><a href="@Url.Action("Index","Matricula")"><i class="fa fa-circle-o"></i> Matricula</a></li>
+                            <li><a href="@Url.Action("Index","Matricula")"><i class="fa fa-circle-o"></i>Matricula</a></li>
 
 
                         </ul>
