--- a/Asp.NETMVCCRUD/Views/ArchivoPago/Index.cshtml
+++ b/Asp.NETMVCCRUD/Views/ArchivoPago/Index.cshtml
@@ -8,9 +8,6 @@
     </div>
 
         
-
-
-
     <table id="ArchivoTable" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
@@ -38,9 +35,6 @@
             </div>
         </div>
     </div>
-
-
-
 
 
     <div class="modal  fade" id="modal-add-carga">
@@ -148,7 +142,7 @@
 
                         {
                             "data": "IdArchivoPago", "render": function (data) {
-                                return "<a class='btn btn-default btn-sm' onclick=PopupForm('@Url.Action("AddOrEdit","Archivo")/" + data + "')><i class='fa fa-pencil'></i> Edit</a><a class='btn btn-danger btn-sm' style='margin-left:5px' onclick=Delete(" + data + ")><i class='fa fa-trash'></i> Delete</a> ";
+                                return "<a class='btn btn-default btn-sm' onclick=PopupForm('@Url.Action("AddOrEdit","ArchivoPago")/" + data + "')><i class='fa fa-pencil'></i> Edit</a><a class='btn btn-danger btn-sm' style='margin-left:5px' onclick=Delete(" + data + ")><i class='fa fa-trash'></i> Delete</a> ";
                             },
 
                         },
