--- a/Asp.NETMVCCRUD/Views/ArchivoPago/AddOrEdit.cshtml
+++ b/Asp.NETMVCCRUD/Views/ArchivoPago/AddOrEdit.cshtml
@@ -28,7 +28,17 @@
         @Html.EditorFor(model => model.FechaSubida, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.FechaSubida)
     </div>
-
+     <div class='col-sm-6'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+    
     <div class="form-group">
         @Html.LabelFor(model => model.EstadoArchivo, new { @class = "control-label" })
         @Html.EditorFor(model => model.EstadoArchivo, new { htmlAttributes = new { @class = "form-control" } })
@@ -41,4 +51,11 @@
         <input type="submit" value="Submit" class="btn btn-primary"  />
         <input type="reset" value="Reset" class="btn" />
     </div>
+    
+    
+         <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>
 }
