--- a/Asp.NETMVCCRUD/Views/Shared/_Layout.cshtml
+++ b/Asp.NETMVCCRUD/Views/Shared/_Layout.cshtml
@@ -13,12 +13,13 @@
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
-
+    <link href="~/Content/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.min.css" rel="stylesheet" />
+    
     <link rel="stylesheet" href="~/Content/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="~/Content/bower_components/font-awesome/css/font-awesome.min.css">
     <!-- Ionicons -->
-    <link rel="stylesheet" href="~/Content/bower_components/Ionicons/css/ionicons.min.css">
+    <link href="~/Content/dist/css/ionicons.min.css" rel="stylesheet" />
     <!-- Theme style -->
     <link href="~/Content/dist/css/select2.min.css" rel="stylesheet" />
 
@@ -489,7 +490,7 @@
         <script src="~/Scripts/jquery.form.min.js"></script>
         <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
         <script src="~/Scripts/notify.min.js"></script>
-    
+  
         <script src="~/Scripts/Script.js"></script>
         <!-- AdminLTE App -->
         <script src="~/Content/dist/js/adminlte.min.js"></script>
