--- a/Asp.NETMVCCRUD/Views/AlumnoMatricula/AddOrEdit.cshtml
+++ b/Asp.NETMVCCRUD/Views/AlumnoMatricula/AddOrEdit.cshtml
@@ -66,8 +66,8 @@
             @Html.EditorFor(model => model.UsuarioRegistro, new { htmlAttributes = new { @class = "form-control" } })
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.IdMatricula, new { @class = "control-label" })
-            @Html.EditorFor(model => model.IdMatricula, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.CodigoSemestre, new { @class = "control-label" })
+            @Html.EditorFor(model => model.CodigoSemestre, new { htmlAttributes = new { @class = "form-control" } })
         </div>
 
         <div class="form-group">
