--- a/Asp.NETMVCCRUD/Views/PagoConsolidado/Index2.cshtml
+++ b/Asp.NETMVCCRUD/Views/PagoConsolidado/Index2.cshtml
@@ -1,20 +1,20 @@
 ﻿@{
-    ViewBag.Title = "PagoConsolidado List";
+    ViewBag.Title = "Pago Consolidado";
 }
-
-
 
 <a class="btn btn-success" style="margin-bottom:10px" onclick="PopupForm('@Url.Action("AddOrEdit","PagoConsolidado")')"><i class="fa fa-plus"></i> Nuevo Pago</a>
 <table id="pagoTable" class="table table-striped table-bordered" style="width:100%">
     <thead>
         <tr>
             <th>ID</th>
-            <th>Código</th>
-            <th>N° Deposito</th>
-            <th>Importa</th>
+            <th>CodigoAlumno</th>
+            <th>NumDeposito</th>
             <th>Concepto</th>
+            <th>Importe</th>
             <th>FechaPago</th>
-            <th>CodigoMatricula</th>
+            <th>IdMatricula</th>
+        
+            
             <th></th>
         </tr>
     </thead>
@@ -30,6 +30,10 @@
     <script>
         var Popup, dataTable;
         $(document).ready(function () {
+
+
+            HelpBuscartConcepto("#concepto_NroConcepto");
+
             dataTable = $("#pagoTable").DataTable({
                 "ajax": {
                     "url": "/PagoConsolidado/GetData",
@@ -38,37 +42,36 @@
                 },
                 "columns": [
                     { "data": "IdPagoConsolidado" },
-                    { "data": "CodigoAlumno" },
+                     { "data": "CodigoAlumno" },
                     { "data": "NumDeposito" },
-                    { "data": "Importe" },
+                   {"data":"concepto.NroConcepto"},
+                 { "data": "Importe" },
+                         {
+                             "data": "FechaPago",
+                             "render": function (value) {
+                                 if (value === null) return "";
+                                 var pattern = /Date\(([^)]+)\)/;
+                                 var results = pattern.exec(value);
+                                 var dt = new Date(parseFloat(results[1]));
+
+                                 var dd = dt.getDate();
+                                 var mm = dt.getMonth() + 1;
+                                 var yyyy = dt.getFullYear();
+
+                                 if (dd < 10) {
+                                     dd = '0' + dd;
+                                 }
+
+                                 if (mm < 10) {
+                                     mm = '0' + mm;
+                                 }
+
+                                 return (dd + "/" + mm) + "/" + yyyy;
+                             }
+                         },
+                 
                     { "data": "CodigoMatricula" },
-                    {
-                        "data": "FechaPago",
-                         "render":function (value) {
-                             if (value === null) return "";
-                             var pattern = /Date\(([^)]+)\)/;
-                             var results = pattern.exec(value);
-                             var dt = new Date(parseFloat(results[1]));
-
-                             var dd = dt.getDate();
-                             var mm = dt.getMonth() + 1;
-                             var yyyy = dt.getFullYear();
-
-                             if (dd < 10) {
-                                 dd = '0' + dd;
-                             }
-
-                             if (mm < 10) {
-                                 mm = '0' + mm;
-                             }
-
-                             return (dd + "/" + mm) + "/" + yyyy;
-                         }
-        
-                    },
-
-
-                   
+             
                     {
                         "data": "IdPagoConsolidado", "render": function (data) {
                         return "<a class='btn btn-default btn-sm' onclick=PopupForm('@Url.Action("AddOrEdit", "PagoConsolidado")/" + data + "')><i class='fa fa-pencil'></i> Edit</a><a class='btn btn-danger btn-sm' style='margin-left:5px' onclick=Delete("+data+")><i class='fa fa-trash'></i> Delete</a>";
@@ -95,8 +98,8 @@
                 Popup = formDiv.dialog({
                     autoOpen: true,
                     resizable: false,
-                    title: 'Pagos',
-                    height: 550,
+                    title: 'Detalle del Pago',
+                    height: 500,
                     width: 400,
                     close: function () {
                         Popup.dialog('destroy').remove();
@@ -136,7 +139,7 @@
             {
                 $.ajax({
                     type: "POST",
-                    url: '@Url.Action("Delete","PagoConsolidado")/' + id,
+                    url: '@Url.Action("Delete", "PagoConsolidado")/' + id,
                     success: function (data) {
                         if (data.success)
                         {
@@ -155,14 +158,56 @@
         }
 
 
-        function ToJavaScriptDate(value) {
-            var pattern = /Date\(([^)]+)\)/;
-            var results = pattern.exec(value);
-            var dt = new Date(parseFloat(results[1]));
-            return (dt.getMonth() + 1) + "/" + dt.getDate() + "/" + dt.getFullYear();
+
+        function HelpBuscartConcepto(elemen) {
+
+            $(elemen).select2({
+                placeholder: "--Seleccionar -- ",
+                minimumInputLength: 1,
+                width: '100%',
+                ajax: {
+                    url: "ConceptoPago/GetDataConcepto",
+                    type: "GET",
+                    dataType: 'json',
+                    data: function (term, page) {
+                        return {
+                            id: HelpParameter("start", term)
+                        };
+                    },
+                    results: function (data, page) {
+                        return {
+                            results: ($.map(data, function (item) {
+                                return { text: item.NroConcepto, id: item.IdConceptoPago }
+                            }))
+                        };
+                    }
+                },
+                initSelection: function (element, callback) {
+                    if (element.val() != "") {
+                        $.ajax({
+                            url: "Perfil/GetDataConceptoById/" + element.val(),
+                            type: 'GET',
+                            dataType: 'json',
+                            success: function (data) {
+                                callback({
+                                    text: data.NroConcepto,
+                                    id: data.IdConceptoPago
+                                });
+                            },
+                        });
+                    } else {
+                        var a = $(elemen).parent().children("div.select2-container").children("a.select2-choice");
+                        a.addClass("select2-default");
+                        a.children("span.select2-chosen").html("--Seleccionar -- ");
+                    }
+                }
+            });
+            $("span.select2-hidden-accessible").remove();
         }
 
+
     </script>
-<script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+
 
 }
