--- a/Asp.NETMVCCRUD/Views/Shared/_Layout.cshtml
+++ b/Asp.NETMVCCRUD/Views/Shared/_Layout.cshtml
@@ -472,15 +472,12 @@
             <div class="pull-right hidden-xs">
                 <b>Version</b> 2.4.0
             </div>
-            <strong>Copyright &copy; 2014-2016 <a href="https://adminlte.io">Almsaeed Studio</a>.</strong> All rights
+            <strong>Copyright &copy; 2018 <a href="https://adminlte.io">POSGRADO</a>.</strong> All rights
             reserved.
         </footer>
        
     </div>
  
-
-
-      
    
         <script src="~/Scripts/jquery-1.12.4.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
