--- a/Asp.NETMVCCRUD/Views/Usuario/AddOrEdit.cshtml
+++ b/Asp.NETMVCCRUD/Views/Usuario/AddOrEdit.cshtml
@@ -28,7 +28,15 @@
         @Html.LabelFor(model => model.Rol, new { @class = "control-label" })
         @Html.EditorFor(model => model.Rol, new { htmlAttributes = new { @class = "form-control" } })
     </div>
-    
+
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.FechaCreacion, new { @class = "control-label" })
+        @Html.EditorFor(model => model.FechaCreacion, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+
+
+
     <div class="form-group">
         
         @Html.LabelFor(model => model.Estado, new { @class = "control-label" })
