--- a/Asp.NETMVCCRUD/Views/Shared/_Layout.cshtml
+++ b/Asp.NETMVCCRUD/Views/Shared/_Layout.cshtml
@@ -14,16 +14,18 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
     <link href="~/Content/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.min.css" rel="stylesheet" />
-    
-    <link rel="stylesheet" href="~/Content/bower_components/bootstrap/dist/css/bootstrap.min.css">
+
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+ 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="~/Content/bower_components/font-awesome/css/font-awesome.min.css">
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
+   
     <!-- Ionicons -->
     <link href="~/Content/dist/css/ionicons.min.css" rel="stylesheet" />
     <!-- Theme style -->
     <link href="~/Content/dist/css/select2.min.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="~/Content/dist/css/AdminLTE.min.css">
+    <link href="~/Content/AdminLTE.min.css" rel="stylesheet" />
+  
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="~/Content/dist/css/skins/_all-skins.min.css">
