--- a/Asp.NETMVCCRUD/Views/Account/Index.cshtml
+++ b/Asp.NETMVCCRUD/Views/Account/Index.cshtml
@@ -29,11 +29,7 @@
     <link href="~/Content/blue.css" rel="stylesheet" />
     
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
     <![endif]-->
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
@@ -41,39 +37,83 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="../../index2.html"><b>SIS</b>POSGRADO</a>
+            <a href=""><b>SIS</b>POSGRADO</a>
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
             <p class="login-box-msg">Iniciar Sesión</p>
 
-            <form action="@Url.Action("Index","Account")" method="post">
-
+            <form id="login-form"  method="post" class='form-horizontal'>
 
                 <div class="form-group has-feedback">
-                    <input type="text" class="form-control" placeholder="Usuario">
-                    <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                </div>
-                <div class="form-group has-feedback">
-                    <input type="password" class="form-control" placeholder="Contraseña">
-                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+       
+               
+                    <div class="col-md-12">
+                        <div class="input-group">
+                            @Html.TextBoxFor(m => m.UserName, new
+
+                       {
+                           @class = "form-control",
+                           @placeholder = "Usuario"
+                       })
+
+                            <span class="input-group-addon">
+                                <i class="glyphicon glyphicon-user"></i>
+                            </span>  
+
+                        </div>
+
+                    </div>
+
                 </div>
 
+
+
+                <div class="form-group ">
+
+
+                    <div class="col-md-12">
+                        <div class="input-group">
+                            @Html.PasswordFor(m => m.Password, new
+
+                       {
+                           @class = "form-control",
+                           @placeholder = "Password"
+                       })
+
+                            <span class="input-group-addon">
+                                <i class="glyphicon glyphicon-lock"></i>
+                            </span>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+
+
+
+
+
+          
 
                 <div class="row">
                     <div class="col-xs-8">
                         <div class="checkbox icheck">
                             <label>
-                                <input type="checkbox"> 
+                              
                             </label>
                         </div>
                     </div>
                     <!-- /.col -->
                     <div class="col-xs-4">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Iniciar</button>
+                        <button type="button" id="btnEntrarSession"  class="btn btn-primary btn-block btn-flat">Iniciar</button>
                     </div>
                     <!-- /.col -->
                 </div>
+
                 @Html.HiddenFor(m => m.ReturnUrl)
             </form>
 
@@ -90,23 +130,79 @@
 
     <!-- Bootstrap 3.3.7 -->
     <script src="~/Content/plugins/jquery-1.12.4.min.js"></script>
-
+    <script src="~/Scripts/jquery.validate.min.js"></script>
 
     <script src="~/Content/plugins/bootstrap.min.js"></script>
     <!-- iCheck -->
 
     <script src="~/Content/plugins/iCheck/icheck.min.js"></script>
     <script>
+ 
+        $(function () {
+            // Validation
+            $("#login-form").validate({
+                onsubmit: false,
+                // Rules for form validation
+                rules: {
+                    'UserName': {
+                        required: true
+                    },
+                    'Password': {
+                        required: true,
+                        minlength: 6
+                    }
+                },
 
+                // Messages for form validation
+                messages: {
+                    'UserName': {
+                        required: 'Por favor, introduzca su Usuario'
+                    },
+                    'Password': {
+                        required: 'Ingrese su contraseña'
+                    }
+                },
 
-            $(function () {
-            $('input').iCheck({
-              checkboxClass: 'icheckbox_square-blue',
-              radioClass: 'iradio_square-blue',
-              increaseArea: '20%' /* optional */
+                // Do not change code below
+                errorPlacement: function (error, element) {
+                    error.insertAfter(element.parent());
+                }
             });
-          });
 
+        });
+
+
+        $("#btnEntrarSession").click(function (evt) {
+            Autenticar();
+        });
+
+
+
+        function Autenticar() {
+            if ($("#login-form").valid()) {
+
+                $.ajax({
+                    type: "POST",
+                    url: "/Account/Login",
+                    dataType: 'json',
+                    data: {
+                        usuario: $('#UserName').val(), password: $('#Password').val()
+                    },
+                    success: function (resultado) {
+                        $('#accionResultado').removeClass("action-alert");
+                        $("#accionResultado").html("");
+
+
+                    },
+                    error: function (req, status, error) {
+                        $('#accionResultado').addClass("action-error");
+                        $('#accionResultado').html("Ha ocurrido un error.");
+                    }
+                });
+            } else {
+                return false;
+            }
+        }
 
     </script>
 </body>
