--- a/Asp.NETMVCCRUD/Views/Account/Index.cshtml
+++ b/Asp.NETMVCCRUD/Views/Account/Index.cshtml
@@ -103,15 +103,23 @@
                     <div class="col-xs-8">
                         <div class="checkbox icheck">
                             <label>
-                              
+
                             </label>
                         </div>
                     </div>
                     <!-- /.col -->
                     <div class="col-xs-4">
-                        <button type="button" id="btnEntrarSession"  class="btn btn-primary btn-block btn-flat">Iniciar</button>
+                        <button type="button" id="btnEntrarSession" class="btn btn-primary btn-block btn-flat">Iniciar</button>
                     </div>
+                    
                     <!-- /.col -->
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div id="loading"></div>
+                    </div>
+
                 </div>
 
                 @Html.HiddenFor(m => m.ReturnUrl)
@@ -183,6 +191,11 @@
         function Autenticar() {
             if ($("#login-form").valid()) {
 
+
+                
+
+                $('#loading').html('<img src="Content/dist/img/ring.gif" />');
+
                 $.ajax({
                     type: "POST",
                     url: "/Account/Login",
@@ -192,7 +205,7 @@
                     },
                     success: function (resultado) {
                         window.location.href = '@Url.Action("Index", "AlumnoMatricula")';
-
+                        $('#loading').html();
 
                     },
                     error: function (req, status, error) {
